# Bioscriptprogram

./: .replit  app.py  biometric_scanner.py  database_config.py  fingerprint_reader.py  gemini_ai.py  main.py  pyproject.toml  real_fingerprint.py  replit.md  test_mysql.py
arduino/: AS608_Fingerprint.ino  README.md
attached_assets/: Pasted-PS-C-Users-HP-Desktop-BioScriptMedical-1-python-main-py-MySQL-veril-nl-r-bazas-na-u-urla-ba-lan-1753086100729_1753086100730.txt  Pasted-PS-C-Users-HP-Desktop-BioScriptMedical-1-python-main-py-MySQL-veril-nl-r-bazas-na-u-urla-ba-lan-1753095239443_1753095239444.txt  Pasted-PS-C-Users-HP-Desktop-BioScriptMedical-1-python-main-py-MySQL-veril-nl-r-bazas-na-u-urla-ba-lan-1753097519379_1753097519380.txt  Pasted-S-n-BioScript-adl-biometrik-s-hiyy-idar-etm-sisteminin-H-kim-Paneli-n-PyQt5-GUI-proqram-haz-r-1753015016195_1753015016195.txt  bio1criptshop_sayt (19)_1753083395509.sql  bio1criptshop_sayt (20)_1753095328794.sql  bio1criptshop_sayt (21)_1753097948733.sql  bio1criptshop_sayt (22)_1753102821717.sql  bio1criptshop_sayt (24)_1753110012883.sql
database/: connection.py  db_manager.py  test_data.py
static/: bioscript_icon.py
ui/: dashboard.py  doctor_login.py  fake_fingerprint_progress.py  fingerprint_scan.py  new_doctor_login.py  new_prescription_workflow.py  new_streamlined_workflow.py  patient_history_ai_widget.py  patient_search.py  patient_selection_dialog.py  pharmacy_dashboard.py  pharmacy_login.py  prescription_editor.py  prescription_workflow.py  sales_dialog.py  statistics_dashboard.py
