[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "matplotlib>=3.10.3",
    "mysql-connector-python>=9.3.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pyqt5>=5.15.11",
    "pyserial>=3.5",
    "requests>=2.32.4",
]
